--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,11 @@ orwynn = "1.0.0rc3"
 aiofiles = "^23.1.0"
 
 
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.0.278"
+coverage = "^7.2.7"
+pytest = "^7.4.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
